# JS-Graphs

./: SQLite9.csv  graphs.js  main.js  notebook.ipynb  package-lock.json  package.json  pyproject.toml  queries.sql
fixed/: fixed_database_1.json
